@@ -210,6 +210,7 @@ KoTemplateChooseDia::~KoTemplateChooseDia()
     d=0L;
 }
 
+// Keep in sync with KoMainWindow::chooseNewDocument
 static bool cancelQuits() {
     bool onlyDoc = !KoDocument::documentList() || KoDocument::documentList()->count() <= 1;
     bool onlyMainWindow = !KMainWindow::memberList || KMainWindow::memberList->count() <= 1;
@@ -261,10 +262,6 @@ KoTemplateChooseDia::ReturnType KoTemplateChooseDia::choose(KInstance* instance,
     }
 
     delete dlg;
-    if ( rt == Cancel && dialogType == Everything && cancelQuits() )
-        // The button says quit, so let's quit
-        kapp->quit();
-
     return rt;
 }
 
@@ -458,7 +455,7 @@ void KoTemplateChooseDia::setupTemplateDialog(QWidget * widgetbase, QGridLayout 
 	d->m_jwidget->showPage(templateNum);
     else if ( defaultTemplateGroup != -1)
 	d->m_jwidget->showPage(defaultTemplateGroup);
-    
+
 
     // Set the initially selected template, possibly from the last usage of the dialog
     currentChanged(itemtoselect);
